--- a/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame.csproj
+++ b/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Buttoncollision.cs" />
+    <Compile Include="MainMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ScreenManager.cs" />
