--- a/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame.csproj
+++ b/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame.csproj
@@ -61,6 +61,7 @@
     <Compile Include="MainMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Screen.cs" />
     <Compile Include="ScreenManager.cs" />
   </ItemGroup>
   <ItemGroup>
