--- a/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame.csproj
+++ b/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Buttoncollision.cs" />
+    <Compile Include="cardReview.cs" />
     <Compile Include="MainMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
