--- a/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame.csproj
+++ b/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame/HearthstoneModGame.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Buttoncollision.cs" />
     <Compile Include="cardReview.cs" />
     <Compile Include="MainMenu.cs" />
+    <Compile Include="PlayAI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Screen.cs" />
